--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
   "short_name": "Kinlan's Amaze App",
   "name": "Kinlan's Amazing Application ++",
-  "start_url": "/index.html",
+  "start_url": "/index.html"
 
 }
