--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,24 @@
 ﻿{
-  "short_name": "Kinlan's Amaze App",
-  "name": "Kinlan's Amazing Application ++",
-  "start_url": "/index.html"
-
+  "short_name": "PA APP",
+  "name": "Peyman Ahmadian APP",
+  "icons": [
+    {
+      "src": "icon96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icon144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "icon196.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/index.html",
+  "display": "standalone",
+  "orientation": "landscape"
 }
