--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
-  "display": "standalone",
-  "orientation": "landscape"
+  "start_url": "index.html",
+  "display": "standalone"
+
 }
